WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124556
WebPageGroup's should keep track of what processes they are being used by
https://bugs.webkit.org/show_bug.cgi?id=124556
Summary
WebPageGroup's should keep track of what processes they are being used by
Sam Weinig
Reported
2013-11-18 20:18:57 PST
WebPageGroup's should keep track of what processes they are being used by
Attachments
Patch
(36.90 KB, patch)
2013-11-18 20:25 PST
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2
(462.42 KB, application/zip)
2013-11-18 22:20 PST
,
Build Bot
no flags
Details
Patch
(9.15 KB, patch)
2013-12-02 11:19 PST
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2013-11-18 20:25:55 PST
Created
attachment 217266
[details]
Patch
Build Bot
Comment 2
2013-11-18 22:20:48 PST
Comment on
attachment 217266
[details]
Patch
Attachment 217266
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/28688033
New failing tests: http/tests/xmlhttprequest/access-control-repeated-failed-preflight-crash.html
Build Bot
Comment 3
2013-11-18 22:20:49 PST
Created
attachment 217272
[details]
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-12 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
mitz
Comment 4
2013-11-20 19:53:45 PST
Comment on
attachment 217266
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=217266&action=review
> Source/WebKit2/ChangeLog:36 > + Get the already create page group on creation.
Already created?
Sam Weinig
Comment 5
2013-11-20 20:06:59 PST
Committed
r159603
: <
http://trac.webkit.org/changeset/159603
>
Ryosuke Niwa
Comment 6
2013-11-20 22:10:42 PST
Maybe the crash we're seeing here is caused by this patch?
http://build.webkit.org/results/Apple%20Mavericks%20Release%20WK2%20(Tests)/r159603%20(889)/results.html
Sam Weinig
Comment 7
2013-11-21 10:00:23 PST
Rolled out in
https://trac.webkit.org/r159631
. There is typo in WebProcessProxy::disconnect() where I meant pageGroups.size() not frames.size() :(.
Alexey Proskuryakov
Comment 8
2013-11-21 10:06:27 PST
Somehow, this also appears to have broken a single XHR test: <
http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Ftests%2Fxmlhttprequest%2Faccess-control-repeated-failed-preflight-crash.html
>.
Alexey Proskuryakov
Comment 9
2013-11-21 10:07:09 PST
Which EWS has told you about before landing!
Sam Weinig
Comment 10
2013-11-24 19:06:30 PST
Committed
r159740
: <
http://trac.webkit.org/changeset/159740
>
Zan Dobersek
Comment 11
2013-11-25 02:34:24 PST
(In reply to
comment #8
)
> Somehow, this also appears to have broken a single XHR test: <
http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Ftests%2Fxmlhttprequest%2Faccess-control-repeated-failed-preflight-crash.html
>.
Failing again on WK2 ports.
Dean Jackson
Comment 12
2013-11-25 11:54:24 PST
(In reply to
comment #11
)
> (In reply to
comment #8
) > > Somehow, this also appears to have broken a single XHR test: <
http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Ftests%2Fxmlhttprequest%2Faccess-control-repeated-failed-preflight-crash.html
>. > > Failing again on WK2 ports.
Yes, it's crashing the test.
WebKit Commit Bot
Comment 13
2013-11-25 13:56:47 PST
Re-opened since this is blocked by
bug 124859
Alexandru Chiculita
Comment 14
2013-11-25 16:09:25 PST
(In reply to
comment #13
)
> Re-opened since this is blocked by
bug 124859
The patch was also crashing the WebInspector. I had a fix, but by the time I've uploaded a fix, this patch got rolled out:
https://bugs.webkit.org/show_bug.cgi?id=124864
Sam Weinig
Comment 15
2013-12-02 11:19:37 PST
Created
attachment 218196
[details]
Patch
Sam Weinig
Comment 16
2013-12-02 16:40:37 PST
Committed
r159982
: <
http://trac.webkit.org/changeset/159982
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug